# testscribe

./: Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: clone_async.rs  lib.rs  tests_tree.rs
crates/core/src/processor/: filter.rs  logger.rs  mod.rs  panic.rs  run_state.rs  runner.rs
crates/core/src/report/: basic.rs  check_report.rs  mod.rs  verify_object.rs
crates/core/src/test_args/: environment.rs  mod.rs  params.rs  parent.rs
crates/core/src/test_case/: fns.rs  mod.rs  name.rs
crates/detached/: Cargo.toml
crates/detached/src/driver/: cli.rs  mod.rs  remote.rs
crates/detached/src/runtime/: interface.rs  messages.rs  mod.rs  status_sender.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: config.rs  derive_param_display.rs  expand_env.rs  expand_params.rs  expand_test.rs  lib.rs  test_fn.rs  utils.rs
crates/standalone/: Cargo.toml
crates/standalone/src/: args.rs  filter.rs  lib.rs  panic_hook.rs  runner.rs
crates/standalone/src/logger/: mod.rs  printer.rs  summary.rs  summary_formatter.rs  test_formatter.rs
crates/testscribe/: Cargo.toml
crates/testscribe/examples/: boo.rs
crates/testscribe/src/: lib.rs
crates/testscribe/tests/: async_mismatch.rs  clone_async.rs  environment_init_error.rs  environment_transform_error.rs  no_async_context.rs  parent_resolution.rs  standalone.rs  test_environment.rs  test_params.rs
crates/testscribe/tests/ui/: clone_one_option.rs  clone_one_option.stderr  params_mode.rs  params_mode.stderr  standalone_no_parent.rs  standalone_no_parent.stderr  sync_test_async_clone.rs  sync_test_async_clone.stderr  unknown_attribute.rs  unknown_attribute.stderr
crates/testscribe/tests/utils/: mod.rs  tree.rs
docs/: advanced_techniques.md  foundations.md  getting_started.md  guidelines.md  llms.md  motivation.md  testing_checklist.md
examples/: README.md
examples/checkout-domain/: .env.sample  Cargo.toml  README.md
examples/checkout-domain/.sqlx/: query-07876f4a6224191b8a40a15be5994c8bf99af37befca5df24e143c2616459a23.json  query-14d0ce66ee611188db2b9207dd245ec6f3e604d6fb66fa5273b5987faf690062.json  query-23620f77f384c3b009e6266c24ea6e06a6bf878e9bd244adc1f0f78a8f13330c.json  query-23c265e2d4c716353ea56282ebe532d80a5ee60eeeb974cdf74e32a278565967.json  query-273968db4b12aef7ed77e91c5155e22de6c6c8f9ee5da938f9f101d24aeacdba.json  query-2a0183e1915ec54d12ef7b0b8149507ea88b0b1242a36fe937c23889ea9b3835.json  query-33c34c5e5d2a3575948c35aa5c624f325da822528f619280fbf3b5f307968bca.json  query-415f383dc1e731342e14721b27d4810e5d7e79da42cf4e0dc62c6d8f050ef444.json  query-43ff178bf42f63e1190b8d49f6d4954bcaaad84fba98051c5b93624a33df7960.json  query-48fb56d387cc03905a6b4df3f9354f7d2e850419a21622a360f4c87ca1cee9a2.json  query-4ddc3035d50b560791e00d08eeea70d7c57628f979667f95d40b4f9a9c1de5c8.json  query-52655327490321310d3997e970a8ff0f639d68399bb2b5127dccc05a71ac8a99.json  query-52e012b7f33b92e6ddc65adb39ee6b75d37d7e97b64fe6834120cf49ef439cec.json  query-5bfaab07a8c9a949bdcc83644ba3fb69fdd45ea2664bca8ae250389aa7ff2318.json  query-6fea70fbb9a909dabd5f62251ad942edb972f73bf2e663d07f19726d9dfedf1e.json  query-8a565bb0bb03d01567f167a596cb0f712654eeaf7afb223c7d9b6711fad389f9.json  query-9ba6fce2c24da20ff25f6dfae45389641978a23b1705d7f42bb4e89994379216.json  query-b37d014da7982ff460e0b79168e428e3d8449f186d533114b3f90c6968a4d5a4.json  query-bed03491345b6801b01846091b667f9dcc2c6e224d4d182fbaaef01baf85d504.json  query-d059acaf7a6c561adb71852eeffb02bc2ff1ccd75ec267e0cf5bc1d1e7299a5e.json  query-df2fc9a17620862b03dbe631037a0a19f0bcde889a056aab77d1a850516004b4.json  query-ef0d2b719953022853eca5bb0d32b43785766af7d68cf3304da430f459f3e56d.json  query-f730af2371ac6b9fb856a517dd530e309aeeb90025148285d9279433d83a6beb.json
examples/checkout-domain/migrations/: 0001_init_checkout_schema.down.sql  0001_init_checkout_schema.up.sql
examples/checkout-domain/src/: error.rs  lib.rs  service.rs  status.rs
examples/features-showcase/: Cargo.toml  README.md
examples/features-showcase/src/: lib.rs
examples/features-showcase/tests/: basic_checks.rs  basic_tests_tree.rs  clone_state_and_environment.rs  custom_checks.rs  custom_test_runner.rs  environment.rs  parameterized_tests.rs
