[package]
name = "testscribe-core"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
