[package]
name = "testscribe-detached"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
testscribe-core.workspace = true
testscribe-standalone.workspace = true
tokio = { version = "1", features = ["net", "rt"] }
tokio-tungstenite = "0.28"
tungstenite = "0.28"
