[package]
name = "testscribe-standalone"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
backtrace = { version = "0.3", features = ["serde"] }
clap = "4.5.57"
colored = "3"
futures = "0.3"
libtest-mimic = "0.8"
serde = { version = "1", features = ["derive"] }
testscribe-core.workspace = true

