[package]
name = "checkout-domain"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "migrate", "macros", "chrono", "uuid"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
testscribe.workspace = true
uuid = "1"