[package]
name = "features-showcase"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
testscribe.workspace = true
tokio = { version = "1", features = ["rt", "macros", "time"] }

[[test]]
name = "custom_test_runner"
harness = false